[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hud/Control.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = 44.0
margin_right = 528.0
margin_bottom = 143.0
color = Color( 0.466667, 0.466667, 0.466667, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 171.0
margin_top = 25.0
margin_right = 353.0
margin_bottom = 74.0

[node name="ButtonLista" type="Button" parent="."]
margin_left = 530.0
margin_top = 42.0
margin_right = 765.0
margin_bottom = 141.0
text = "Lista preenchida"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = 171.0
margin_right = 526.0
margin_bottom = 266.0
color = Color( 0.466667, 0.466667, 0.466667, 1 )

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 279.0
margin_top = 2.0
margin_right = 519.0
margin_bottom = 96.0

[node name="TextEdit" type="TextEdit" parent="ColorRect2"]
margin_right = 274.0
margin_bottom = 99.0

[node name="ButtonPren" type="Button" parent="."]
margin_left = 524.0
margin_top = 168.0
margin_right = 761.0
margin_bottom = 264.0
text = "Preencher lista"

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 289.0
margin_right = 526.0
margin_bottom = 386.0
rect_pivot_offset = Vector2( -89, -93 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )

[node name="Label" type="Label" parent="ColorRect3"]
margin_left = 274.0
margin_top = 4.0
margin_right = 524.0
margin_bottom = 96.0

[node name="TextEdit2" type="TextEdit" parent="ColorRect3"]
margin_left = -1.0
margin_top = -2.0
margin_right = 273.0
margin_bottom = 97.0

[node name="ButtonPren2" type="Button" parent="."]
margin_left = 528.0
margin_top = 289.0
margin_right = 765.0
margin_bottom = 391.0
text = "Retornar Valor"

[node name="ColorRect4" type="ColorRect" parent="."]
margin_top = 417.0
margin_right = 527.0
margin_bottom = 534.0
color = Color( 0.466667, 0.466667, 0.466667, 1 )

[node name="Label" type="Label" parent="ColorRect4"]
margin_left = 192.0
margin_top = 34.0
margin_right = 347.0
margin_bottom = 81.0

[node name="ButtonPren3" type="Button" parent="."]
margin_left = 527.0
margin_top = 420.0
margin_right = 764.0
margin_bottom = 540.0
text = "Retornar Texto"

[connection signal="pressed" from="ButtonLista" to="." method="_on_ButtonLista_pressed"]
[connection signal="pressed" from="ButtonPren" to="." method="_on_ButtonPren_pressed"]
[connection signal="pressed" from="ButtonPren2" to="." method="_on_ButtonPren2_pressed"]
[connection signal="pressed" from="ButtonPren3" to="." method="_on_ButtonPren3_pressed"]
